# notisr

./: .gitignore  CHANGELOG.md  README.md  license  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-backend/: Cargo.toml  schema.graphql  template.yml
src-backend/appsync-authorize/: Cargo.toml
src-backend/appsync-authorize/src/: main.rs
src-backend/appsync-functions/: batchGetStreamers.js  updateStreamer.js
src-backend/get-streamers/: Cargo.toml
src-backend/get-streamers/src/: main.rs
src-backend/graphql/: schema.graphql
src-backend/graphql/functions/: fetchStreamer.js  updateStreamer.js
src-backend/src/: main.rs
src-backend/webhook-handler/: Cargo.toml
src-backend/webhook-handler/src/: main.rs
src-backend/webhook-register/: Cargo.toml
src-backend/webhook-register/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appsync.rs  command.rs  dev_store.rs  lib.rs  main.rs  notifications.rs  oauth.rs  twitch.rs  util.rs
src-tauri/src/appsync/: mod.rs  protocol.rs  subscriptions.rs  util.rs  worker.rs
src/assets/icons/: moon.tsx  sun.tsx
src/components/: Broadcaster.tsx  Glitch.tsx  Live.tsx  Menu.tsx  ThemeToggle.tsx
src/components/ThemedSimpleBar/: ThemedSimpleBar.css  ThemedSimpleBar.tsx
src/hooks/: reducer.ts
src/lib/: utils.ts
src/views/: List.tsx  LogIn.tsx
