[package]
name = "notisr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notisr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rouille = "3.6.2"
rand = "0.9.1"
dotenvy = "0.15.7"
url = "2.5.4"
base64 = "0.22.1"
reqwest = { version = "0.12.22", features = ["blocking", "json", "rustls-tls"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
sha2 = "0.10.9"
jsonwebtoken = "8"
once_cell = "1.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
http = "0.2"
tauri-plugin-notification = "2"


