[package]
name = "appsync-authorize"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = "0.14.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12.23", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
dashmap = "6"
openssl = { version = "0.10", features = ["vendored"] }
