[package]
name = "get-streamers"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.5"
aws-sdk-dynamodb = "1.89.0"
aws-sdk-secretsmanager = "1.85.0"
aws-smithy-types = "1.3"
aws-types = "1.3.8"
aws-credential-types = "1.2.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lambda_http = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
