[package]
name = "webhook-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.25.1"
aws-sdk-secretsmanager = "0.25.1"
aws-smithy-types = "1.3"
chrono = { version = "0.4.24", features = ["serde"] }
hmac = "0.12.1"
hex = "0.4.3"
lambda_http = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
