[package]
name = "webhook-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.5"
aws-sdk-dynamodb = "1.89.0"
aws-sdk-secretsmanager = "1.85.0"
aws-smithy-types = "1.3"
aws-types = "1.3.8"
aws-credential-types = "1.2.5"
chrono = { version = "0.4.24", features = ["serde"] }
hmac = "0.12.1"
hex = "0.4.3"
lambda_http = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.23", features = ["rustls-tls", "json"] }
aws-sigv4 = "1.3.4"
http = "1.3.1"
aws-sdk-sts = "1.83.0"
